- added visibility on/off to product p tags, - fixed overlay issue on sidebarmenu, - added the arrow svgs back in. This needs to be checked across all browsers

--- a/my-app/src/app/layout/layout.component.scss
+++ b/my-app/src/app/layout/layout.component.scss
@@ -454,6 +454,11 @@ header{
         .left-open .ng-sidebar__content > div {
             left:369px;
             position: absolute;
+
+        }
+
+        & ng-sidebar-container{
+            transition:all transform 0.3s cubic-bezier(0, 0, 0.3, 1);
         }
 
 
